--- a/SalesEdge/Base.lproj/Main.storyboard
+++ b/SalesEdge/Base.lproj/Main.storyboard
@@ -670,7 +670,11 @@
                                                 <action selector="onCancelTouch:" destination="R3V-UH-qy2" id="Dap-5m-hXX"/>
                                             </connections>
                                         </barButtonItem>
-                                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="M1e-zZ-syE"/>
+                                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="M1e-zZ-syE">
+                                            <connections>
+                                                <action selector="onSaveTouch:" destination="R3V-UH-qy2" id="x9c-Hs-9gd"/>
+                                            </connections>
+                                        </barButtonItem>
                                     </navigationItem>
                                 </items>
                             </navigationBar>
@@ -678,11 +682,11 @@
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="Cell" rowHeight="148" id="oXB-QT-kFz" customClass="CustomTableCellView" customModule="SalesEdge" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" rowHeight="148" id="oXB-QT-kFz" customClass="CustomTableCellView" customModule="SalesEdge" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="148"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="oXB-QT-kFz" id="CPV-1I-5DN">
-                                            <rect key="frame" x="0.0" y="0.0" width="342" height="147.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="147.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vky-IN-FF6">
@@ -693,19 +697,19 @@
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="TopLeft" text="Label111" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U9a-cY-bJP">
-                                                    <rect key="frame" x="83" y="21" width="259" height="100"/>
+                                                    <rect key="frame" x="83" y="21" width="292" height="100"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mwS-14-nJA">
-                                                    <rect key="frame" x="305.5" y="11" width="28.5" height="13.5"/>
+                                                    <rect key="frame" x="331.5" y="11" width="28.5" height="13.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="252" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f2v-EE-C1j">
-                                                    <rect key="frame" x="83" y="121" width="251" height="16"/>
+                                                    <rect key="frame" x="83" y="121" width="277" height="16"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -1016,24 +1020,90 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="coming soon" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z6r-6Q-j7Q">
-                                <rect key="frame" x="138.5" y="75" width="98.5" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="5xs-3N-bmu">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="Cell" rowHeight="148" id="RAV-9f-Ynm" customClass="CustomTableCellView" customModule="SalesEdge" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="148"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="RAV-9f-Ynm" id="Oat-IL-OeB">
+                                            <rect key="frame" x="0.0" y="0.0" width="342" height="147.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ehg-3P-hoe">
+                                                    <rect key="frame" x="15" y="11" width="60" height="60"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="60" id="cIi-pY-MGL"/>
+                                                        <constraint firstAttribute="width" constant="60" id="i3z-fB-dae"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="TopLeft" text="Label111" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yYe-vB-9s0">
+                                                    <rect key="frame" x="83" y="21" width="259" height="100"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EyE-AD-mis">
+                                                    <rect key="frame" x="305.5" y="11" width="28.5" height="13.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="252" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PBZ-rb-q1i">
+                                                    <rect key="frame" x="83" y="121" width="251" height="16"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="PBZ-rb-q1i" firstAttribute="leading" secondItem="yYe-vB-9s0" secondAttribute="leading" id="8qq-8z-YF4"/>
+                                                <constraint firstItem="PBZ-rb-q1i" firstAttribute="leading" secondItem="Oat-IL-OeB" secondAttribute="leadingMargin" constant="68" id="BMa-9s-cT7"/>
+                                                <constraint firstAttribute="trailing" secondItem="yYe-vB-9s0" secondAttribute="trailing" id="LX0-EQ-BHk"/>
+                                                <constraint firstItem="yYe-vB-9s0" firstAttribute="top" secondItem="Oat-IL-OeB" secondAttribute="topMargin" constant="10" id="LcO-Yr-58i"/>
+                                                <constraint firstItem="ehg-3P-hoe" firstAttribute="top" secondItem="Oat-IL-OeB" secondAttribute="topMargin" id="Oj0-2F-HzH"/>
+                                                <constraint firstItem="EyE-AD-mis" firstAttribute="trailing" secondItem="Oat-IL-OeB" secondAttribute="trailingMargin" id="QRw-Ic-hmh"/>
+                                                <constraint firstItem="yYe-vB-9s0" firstAttribute="leading" secondItem="ehg-3P-hoe" secondAttribute="trailing" constant="8" id="SVN-qz-VjC"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="PBZ-rb-q1i" secondAttribute="trailing" id="VVY-vo-9ls"/>
+                                                <constraint firstItem="PBZ-rb-q1i" firstAttribute="top" secondItem="yYe-vB-9s0" secondAttribute="bottom" id="W1w-Tv-dVj"/>
+                                                <constraint firstItem="ehg-3P-hoe" firstAttribute="leading" secondItem="Oat-IL-OeB" secondAttribute="leadingMargin" id="cLb-05-euv"/>
+                                                <constraint firstItem="EyE-AD-mis" firstAttribute="top" secondItem="Oat-IL-OeB" secondAttribute="topMargin" id="ceN-Tf-wkA"/>
+                                                <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="ehg-3P-hoe" secondAttribute="bottom" constant="8" id="e2b-xm-xpV"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="PBZ-rb-q1i" secondAttribute="bottom" id="rbh-b2-Fks"/>
+                                                <constraint firstItem="PBZ-rb-q1i" firstAttribute="top" secondItem="yYe-vB-9s0" secondAttribute="bottom" id="xdx-eo-mOe"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="mImage" destination="ehg-3P-hoe" id="fWi-UN-p8I"/>
+                                            <outlet property="mTxtLabel" destination="yYe-vB-9s0" id="8n5-ll-9Q3"/>
+                                            <outlet property="mTxtSubTitle" destination="PBZ-rb-q1i" id="4Bp-Uh-0bJ"/>
+                                            <outlet property="mTxtTimestamp" destination="EyE-AD-mis" id="Drf-NY-gKT"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="gcc-yL-5Bm" id="cBj-4t-DDz"/>
+                                    <outlet property="delegate" destination="gcc-yL-5Bm" id="JWy-M9-MgR"/>
+                                </connections>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="Z6r-6Q-j7Q" firstAttribute="top" secondItem="sUI-dW-7ky" secondAttribute="top" constant="55" id="FXt-UA-cFK"/>
-                            <constraint firstItem="Z6r-6Q-j7Q" firstAttribute="centerX" secondItem="ou3-fG-0cT" secondAttribute="centerX" id="Rga-1D-1rY"/>
+                            <constraint firstItem="sUI-dW-7ky" firstAttribute="trailing" secondItem="5xs-3N-bmu" secondAttribute="trailing" id="IM5-C3-BX9"/>
+                            <constraint firstItem="sUI-dW-7ky" firstAttribute="bottom" secondItem="5xs-3N-bmu" secondAttribute="bottom" id="P1z-Oe-Mn7"/>
+                            <constraint firstItem="5xs-3N-bmu" firstAttribute="top" secondItem="sUI-dW-7ky" secondAttribute="top" id="VdM-Dr-VAd"/>
+                            <constraint firstItem="5xs-3N-bmu" firstAttribute="leading" secondItem="sUI-dW-7ky" secondAttribute="leading" id="gyo-8o-lRi"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="sUI-dW-7ky"/>
                     </view>
+                    <connections>
+                        <outlet property="mTableView" destination="5xs-3N-bmu" id="cjQ-Xn-pdY"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AEW-3F-uQS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4686" y="-1857"/>
+            <point key="canvasLocation" x="5278" y="-2633"/>
         </scene>
         <!--MyID View Controller-->
         <scene sceneID="MIg-vc-L5u">
@@ -1234,7 +1304,7 @@
                             <barButtonItem systemItem="save" id="Pcd-C7-ye9"/>
                             <barButtonItem title="Pick" id="Ihj-Uo-fiI">
                                 <connections>
-                                    <segue destination="R3V-UH-qy2" kind="presentation" id="jYD-JD-lke"/>
+                                    <segue destination="R3V-UH-qy2" kind="presentation" identifier="show_pick" id="jYD-JD-lke"/>
                                 </connections>
                             </barButtonItem>
                         </rightBarButtonItems>
